--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <img src="./images/cooperative scolaire.jpg" alt="" />
         <div class="promotion-content">
           <h3>COOPERATIVE SCOLAIRE</h3>
-          <a href="">PARTICIPEZ</a>
+          <a href="">https://www.facebook.com/%C3%89l%C3%A8ve-entrepreneur-du-lyc%C3%A9e-moderne-de-port-bouet-102268155390758</a>
         </div>
       </div>
 
