--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <img src="./images/vdj.jpg" alt="" />
         <div class="promotion-content">
           <h3>VOIX DES JEUNES SCHOOL</h3>
-          <a href="https://socialchangefactory.org/contribuez/">PARTICIPEZ</a>
+          <a href="https://socialchangefactory.org/contribuez/">CONTRIBUEZ</a>
         </div>
       </div>
     </div>
