--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide">
-              <img src="./images/social propre.png" alt="">
+              <a href="https://socialchangefactory.org/"><img src="./images/social propre.png" alt=""></a>
             </li>
             <li class="glide__slide">
-              <img src="./images/unicef.png" alt="">
+              <a href="https://www.unicef.org/fr"><img src="./images/unicef.png" alt=""></a>
             </li>
             <li class="glide__slide">
               <img src="./images/Claude Demers.jpg" alt="">
