--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
               <a href="https://www.unicef.org/fr"><img src="./images/unicef.png" alt=""></a>
             </li>
             <li class="glide__slide">
-              <img src="./images/Claude Demers.jpg" alt="">
+              <a href="https://www.canadainternational.gc.ca/cotedivoire/index.aspx?lang=eng"><img src="./images/Claude Demers.jpg" alt=""></a>
             </li>
             <li class="glide__slide">
               <img src="./images/fur de.png" alt="">
