--- a/arachide.html
+++ b/arachide.html
@@ -112,19 +112,19 @@
             <img src="./images/" alt="" />
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
         </div>
       </div>
