--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
       <h2>Nos Partenaires et Sponsors</h2>
       <span>Des personalités, organisations et entreprises que nous remercions chaque jour dans notre lutte</span>
     </div>
+  
 
     <div class="brand-layout container">
       <div class="glide" id="glide1">
@@ -401,16 +402,16 @@
               <a href="https://www.canadainternational.gc.ca/cotedivoire/index.aspx?lang=eng"><img src="./images/Claude Demers.jpg" alt=""></a>
             </li>
             <li class="glide__slide">
-              <img src="./images/fur de.png" alt="">
+              <a href="https://www.freiheit.org/de"><img src="./images/fur de.png" alt=""></a>
             </li>
             <li class="glide__slide">
-              <img src="./images/nsia.png" alt="">
+              <a href="https://www.groupensia.com/fr/fondation-nsia"><img src="./images/nsia.png" alt=""></a>
             </li>
             <li class="glide__slide">
-              <img src="./images/oxfam.png" alt="">
+              <a href="https://www.oxfam.org/fr"><img src="./images/oxfam.png" alt=""></a>
             </li>
             <li class="glide__slide">
-              <img src="./images/total senegal.png" alt="">
+              <a href="https://www.total.sn/"><img src="./images/total senegal.png" alt=""></a>
             </li>
             
             
