--- a/pavet.html
+++ b/pavet.html
@@ -109,22 +109,22 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href="detaille 1 pavet .html"><img src="./images/pavet zooo.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
         </div>
       </div>
