--- a/savon liquide.html
+++ b/savon liquide.html
@@ -109,22 +109,22 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href="detaille savon liquide 1.html"><img src="./images/detaille savon liquide.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
         </form>
 
         <form class="form">
-          <a href="cart.html" class="addCart">Ajouter au panier</a>
+          <a href="cart savon liquide.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
