--- a/trousse.html
+++ b/trousse.html
@@ -109,22 +109,22 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href="detaille trousse 1.html"><img src="./images/detaille trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
         </div>
       </div>
