--- a/apropos et detailles.html
+++ b/apropos et detailles.html
@@ -101,160 +101,13 @@
   </nav>
 
   <!-- Product Details -->
-  <section class="section product-detail">
-    <div class="details container">
-      <div class="left">
-        <div class="main">
-          <img src="./images/pavet.png" alt="" />
-        </div>
-        <div class="thumbnails">
-          <div class="thumbnail">
-            <a href="detaille 1 pavet .html"><img src="./images/pavet zooo.png" alt="" /></a>
-          </div>
-          <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-          <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-          <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-          <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-          <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-        </div>
-      </div>
-      <div class="right">
-        <span>Domicile/Pavet</span>
-        <h1>Pavet Réciclable</h1>
-        <div class="price">5000 fcfa/km°2</div>
-        <form>
-          <div>
-            <select>
-              <option value="Select Size" selected disabled>
-                l'unité de mesure
-              </option>
-              <option value="1">m°2</option>
-              <option value="2">km°2</option>
-            </select>
-            <span><i class="fas fa-chevron-down"></i></span>
-          </div>
-        </form>
-
-        <form class="form">
-          <a href="cart pavet.html" class="addCart">Ajouter au panier</a>
-        </form>
-        <h3>DÉTAIL DU PRODUIT</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima
-          delectus nulla voluptates nesciunt quidem laudantium, quisquam
-          voluptas facilis dicta in explicabo, laboriosam ipsam suscipit!
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Related Products -->
-
-  <section class="section related-products">
+  <section class="section promotion">
     <div class="title">
-      <h2>Produits connexes</h2>
-      <span>Choisissez parmi les marques de produits haut de gamme et économisez beaucoup d’argent</span>
+      <span># jelmpb-shop.ml
+Centre d’affaires · Produit/service
+JELMPB - Ecommerce Website Restez chez vous, Rendez Vous Dans Votre Boutique En Ligne! Achetez en ligne tous les produits Essentiels ✔ Supermarché, Produits de nettoyage, Produits Scolaire, Pavet, Matériels ou Outils D'ecoles et plus encore ✔ Toutes les marques à petits prix...! ✈ Livraison rapide partout à Abidjan... ✔ Paiement à la livraison</span>
     </div>
-    <div class="product-layout container">
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/savon liquide.jpg" alt="" />
-          <div class="addCart">
-            <a href="savon liquide.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Savon liquide</a>
-          <div class="price">
-            <span>500 fcfa</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/oeufs africain.jpg" alt="" />
-          <div class="addCart">
-            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Oeufs Africain</a>
-          <div class="price">
-            <span>150 fcfa</span>
-            <span class="cancel">200 fcfa</span>
-          </div>
-        </div>
-      </div>
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/plante.jpg" alt="" />
-          <div class="addCart">
-            <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Plante (fleur & potager etc...)</a>
-
-          <div class="price">
-            <span>5000 fcfa/km°2</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/aracchide.jpg" alt="" />
-          <div class="addCart">
-            <a href="arachide.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Arachide</a>
-
-          <div class="price">
-            <span>100 fcfa/sachet</span>
-            <span class="cancel">200 fcfa/sachet</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  
   <!-- Footer -->
   <footer id="footer" class="section footer">
     <div class="container">
