--- a/detaille savon liquide 1.html
+++ b/detaille savon liquide 1.html
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="wrapper container">
-      <div class="logo"><a href="">BLOGSHOP</a></div>
+      <div class="logo"><a href="">JELMPB-Shop</a></div>
       <ul class="nav-list">
         <div class="top">
           <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
@@ -27,7 +27,7 @@
         <li><a href="index.html">Domicile</a></li>
         <li><a href="products.html">Des produits</a></li>
         <li>
-          <a href="" class="desktop-item">Boutique <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="index.html" class="desktop-item">Boutique <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showMega" />
           <label for="showMega" class="mobile-item">Boutique <span><i class="fas fa-chevron-down"></i></span></label>
           <div class="mega-box">
@@ -65,25 +65,25 @@
             </div>
           </div>
         </li>
-        <li><a href="">Blog</a></li>
+        <li><a href="http://jelmpbschop.e-monsite.com/blog/">Blog</a></li>
         <li>
-          <a href="" class="desktop-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="#" class="desktop-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showdrop1" />
           <label for="showdrop1" class="mobile-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu1">
-            <li><a href="">Listes des magasins des fournisseurs</a></li>
-            <li><a href="">Détails du magasin</a></li>
+            <li><a href="#">Listes des magasins des fournisseurs</a></li>
+            <li><a href="apropos et detailles.html">Détails du magasin</a></li>
           </ul>
         </li>
 
         <li>
-          <a href="" class="desktop-item">Page <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="http://jelmpbschop.e-monsite.com/" class="desktop-item">Page <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showdrop2" />
           <label for="showdrop2" class="mobile-item">Page <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu2">
-            <li><a href="">À propos</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Faq</a></li>
+            <li><a href="apropos et detailles.html">À propos</a></li>
+            <li><a href="http://jelmpbschop.e-monsite.com/contact/contact.html">Contact</a></li>
+            <li><a href="LICENSE">Faq</a></li>
             <li><a href="page 404">Page 404</a></li>
           </ul>
         </li>
