--- a/products 2.html
+++ b/products 2.html
@@ -28,7 +28,7 @@
         <li><a href="index.html">Domicile</a></li>
         <li><a href="products.html">Des produits</a></li>
         <li>
-          <a href="" class="desktop-item">Boutique <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="index.html" class="desktop-item">Boutique <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showMega" />
           <label for="showMega" class="mobile-item">Boutique <span><i class="fas fa-chevron-down"></i></span></label>
           <div class="mega-box">
@@ -66,25 +66,25 @@
             </div>
           </div>
         </li>
-        <li><a href="">Blog</a></li>
+        <li><a href="http://jelmpbschop.e-monsite.com/blog/">Blog</a></li>
         <li>
-          <a href="" class="desktop-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="#" class="desktop-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showdrop1" />
           <label for="showdrop1" class="mobile-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu1">
-            <li><a href="">Listes des magasins des fournisseurs</a></li>
-            <li><a href="">Détails du magasin</a></li>
+            <li><a href="#">Listes des magasins des fournisseurs</a></li>
+            <li><a href="apropos et detailles.html">Détails du magasin</a></li>
           </ul>
         </li>
 
         <li>
-          <a href="" class="desktop-item">Page <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="http://jelmpbschop.e-monsite.com/" class="desktop-item">Page <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showdrop2" />
           <label for="showdrop2" class="mobile-item">Page <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu2">
-            <li><a href="">À propos</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Faq</a></li>
+            <li><a href="apropos et detailles.html">À propos</a></li>
+            <li><a href="http://jelmpbschop.e-monsite.com/contact/contact.html">Contact</a></li>
+            <li><a href="LICENSE">Faq</a></li>
             <li><a href="page 404">Page 404</a></li>
           </ul>
         </li>
