--- a/partenaire.html
+++ b/partenaire.html
@@ -115,271 +115,6 @@
     </div>
   </div>
 
-  <!-- Promotion -->
-
-  <section class="section promotion">
-    <div class="title">
-      <h2>Boutique Collections</h2>
-      <span>Choisissez parmi ces thermatiques pour améliorer notre vie en milieu scolaire !</span>
-    </div>
-
-    <div class="promotion-layout container">
-      <div class="promotion-item">
-        <img src="./images/toilette propre.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>ASSAINISSEMENT DES<br>TOILLETTES</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/ecole verte.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>ECOLES VERTES</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/dechets plastique.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>DECHETS PLASTIQUES</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/cooperative scolaire.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>COOPERATIVE SCOLAIRE</h3>
-          <a href="https://www.facebook.com/%C3%89l%C3%A8ve-entrepreneur-du-lyc%C3%A9e-moderne-de-port-bouet-102268155390758">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/covid 19.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>COVID-19</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/vdj.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>VOIX DES JEUNES SCHOOL</h3>
-          <a href="https://socialchangefactory.org/contribuez/">CONTRIBUEZ</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Products -->
-  <section class="section products">
-    <div class="title">
-      <h2>Nouveaux produits</h2>
-      <span>Choisissez parmi le produit premium et économisez beaucoup d'argent</span>
-    </div>
-
-    <div class="product-layout">
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/trousse.jpg" alt="" />
-          <div class="addCart">
-            <a href="trousse.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Trousse Réciclable</a>
-          <div class="price">
-            <span>500 fcfa</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/cache nez.jpg" alt="" />
-          <div class="addCart">
-            <a href="cache nez.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Cache Nez (fille & garçon)</a>
-          <div class="price">
-            <span>250 fcfa</span>
-            <span class="cancel">500 fcfa</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/savon liquide.jpg" alt="" />
-          <div class="addCart">
-            <a href="savon liquide.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Savon liquide</a>
-          <div class="price">
-            <span>500 fcfa</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/oeufs africain.jpg" alt="" />
-          <div class="addCart">
-            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Oeufs Africain</a>
-          <div class="price">
-            <span>150 fcfa</span>
-            <span class="cancel">200 fcfa</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/pavet.jpg" alt="" />
-          <div class="addCart">
-            <a href="pavet.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Pavet Réciclable</a>
-          <div class="price">
-            <span>5000 fcfa/km°2</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/plante.jpg" alt="" />
-          <div class="addCart">
-            <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Plante (fleur & potager etc...)</a>
-
-          <div class="price">
-            <span>5000 fcfa/km°2</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/aracchide.jpg" alt="" />
-          <div class="addCart">
-            <a href="arachide.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Arachide</a>
-
-          <div class="price">
-            <span>100 fcfa/sachet</span>
-            <span class="cancel">200 fcfa/sachet</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/feuilles d'oignon.jpg" alt="" />
-          <div class="addCart">
-            <a href="feuilles d'oignon.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">feuilles d'oignon</a>
-          <div class="price">
-            <span>500 fcfa/kilko</span>
-            <span class="cancel">600 fcfa/kilo</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ADVERT -->
-  <section class="section advert">
-    <div class="advert-layout container">
-      <div class="item ">
-        <img src="./images/saison.jpg" alt="">
-        <div class="content left">
-          <span>Ventes exclusives</span>
-          <h3>Collections de saison</h3>
-          <a href="products.html">Voir la collection</a>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./images/salon des createurs.jpg" alt="">
-        <div class="content  right">
-          <span>Nouvelle sortir</span>
-          <h3>Salon des créateurs</h3>
-          <a href="http://jelmpbschop.e-monsite.com/">Accéder maintenant </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- BRANDS -->
   <section class="section brands">
     <div class="title">
@@ -428,10 +163,10 @@
       <div class="footer-container">
         <div class="footer-center">
           <h3>SUPPLÉMENTS</h3>
-          <a href="partenaire.html">les partenaires</a>
+          <a href="#">les partenaires</a>
           <a href="#">Certificats-cadeaux</a>
           <a href="#">Affilier</a>
-          <a href="promation.html">Promotions</a>
+          <a href="#">Promotions</a>
           <a href="#">Plan du site</a>
         </div>
         <div class="footer-center">
@@ -446,12 +181,12 @@
           <h3>MON COMPTE</h3>
           <a href="#">MON COMPTE</a>
           <a href="#">Historique des commandes</a>
-          <a href="liste des souhaits.html">Liste de souhaits</a>
+          <a href="#">Liste de souhaits</a>
           <a href="#">Bulletin</a>
-          <a href="index.html">Retour</a>
+          <a href="#">Retour</a>
         </div>
         <div class="footer-center">
-          <h3>CONTACTER-NOUS</h3>
+          <a href="http://jelmpbschop.e-monsite.com/contact/contact.html"><h3>CONTACTER-NOUS</h3></a>
           <div>
             <span>
               <i class="fas fa-map-marker-alt"></i>
@@ -462,7 +197,7 @@
             <span>
               <i class="far fa-envelope"></i>
             </span>
-            <a href="#">JELMPB-Shop@gmail.com</a>
+            <a href="">JELMPB-Shop@gmail.com</a>
           </div>
           <div>
             <span>
