--- a/promation.html
+++ b/promation.html
@@ -114,66 +114,6 @@
       <img src="./images/eleve devant ordi.png" alt="" />
     </div>
   </div>
-
-  <!-- Promotion -->
-
-  <section class="section promotion">
-    <div class="title">
-      <h2>Boutique Collections</h2>
-      <span>Choisissez parmi ces thermatiques pour améliorer notre vie en milieu scolaire !</span>
-    </div>
-
-    <div class="promotion-layout container">
-      <div class="promotion-item">
-        <img src="./images/toilette propre.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>ASSAINISSEMENT DES<br>TOILLETTES</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/ecole verte.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>ECOLES VERTES</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/dechets plastique.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>DECHETS PLASTIQUES</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/cooperative scolaire.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>COOPERATIVE SCOLAIRE</h3>
-          <a href="https://www.facebook.com/%C3%89l%C3%A8ve-entrepreneur-du-lyc%C3%A9e-moderne-de-port-bouet-102268155390758">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/covid 19.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>COVID-19</h3>
-          <a href="">PARTICIPEZ</a>
-        </div>
-      </div>
-
-      <div class="promotion-item">
-        <img src="./images/vdj.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>VOIX DES JEUNES SCHOOL</h3>
-          <a href="https://socialchangefactory.org/contribuez/">CONTRIBUEZ</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Products -->
   <section class="section products">
     <div class="title">
@@ -358,70 +298,6 @@
     </div>
   </section>
 
-  <!-- ADVERT -->
-  <section class="section advert">
-    <div class="advert-layout container">
-      <div class="item ">
-        <img src="./images/saison.jpg" alt="">
-        <div class="content left">
-          <span>Ventes exclusives</span>
-          <h3>Collections de saison</h3>
-          <a href="products.html">Voir la collection</a>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./images/salon des createurs.jpg" alt="">
-        <div class="content  right">
-          <span>Nouvelle sortir</span>
-          <h3>Salon des créateurs</h3>
-          <a href="http://jelmpbschop.e-monsite.com/">Accéder maintenant </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- BRANDS -->
-  <section class="section brands">
-    <div class="title">
-      <h2>Nos Partenaires et Sponsors</h2>
-      <span>Des personalités, organisations et entreprises que nous remercions chaque jour dans notre lutte</span>
-    </div>
-  
-
-    <div class="brand-layout container">
-      <div class="glide" id="glide1">
-        <div class="glide__track" data-glide-el="track">
-          <ul class="glide__slides">
-            <li class="glide__slide">
-              <a href="https://socialchangefactory.org/"><img src="./images/social propre.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.unicef.org/fr"><img src="./images/unicef.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.canadainternational.gc.ca/cotedivoire/index.aspx?lang=eng"><img src="./images/Claude Demers.jpg" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.freiheit.org/de"><img src="./images/fur de.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.groupensia.com/fr/fondation-nsia"><img src="./images/nsia.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.oxfam.org/fr"><img src="./images/oxfam.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.total.sn/"><img src="./images/total senegal.png" alt=""></a>
-            </li>
-            
-            
-          </ul>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
   <!-- Footer -->
   <footer id="footer" class="section footer">
     <div class="container">
@@ -431,7 +307,7 @@
           <a href="partenaire.html">les partenaires</a>
           <a href="#">Certificats-cadeaux</a>
           <a href="#">Affilier</a>
-          <a href="promation.html">Promotions</a>
+          <a href="#">Promotions</a>
           <a href="#">Plan du site</a>
         </div>
         <div class="footer-center">
@@ -446,12 +322,12 @@
           <h3>MON COMPTE</h3>
           <a href="#">MON COMPTE</a>
           <a href="#">Historique des commandes</a>
-          <a href="liste des souhaits.html">Liste de souhaits</a>
+          <a href="#">Liste de souhaits</a>
           <a href="#">Bulletin</a>
-          <a href="index.html">Retour</a>
+          <a href="#">Retour</a>
         </div>
         <div class="footer-center">
-          <h3>CONTACTER-NOUS</h3>
+          <a href="http://jelmpbschop.e-monsite.com/contact/contact.html"><h3>CONTACTER-NOUS</h3></a>
           <div>
             <span>
               <i class="fas fa-map-marker-alt"></i>
@@ -462,7 +338,7 @@
             <span>
               <i class="far fa-envelope"></i>
             </span>
-            <a href="#">JELMPB-Shop@gmail.com</a>
+            <a href="">JELMPB-Shop@gmail.com</a>
           </div>
           <div>
             <span>
