--- a/douzene d'oeufs 1.html
+++ b/douzene d'oeufs 1.html
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="wrapper container">
-      <div class="logo"><a href="">JELMPB-Shop</a></div>
+      <div class="logo"><a href="index.html">JELMPB-Shop</a></div>
       <ul class="nav-list">
         <div class="top">
           <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
@@ -105,14 +105,14 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/oeufs africain.png" alt="" />
+          <img src="./images/" alt="douzene d'oeufs 1.png" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
             <img src="./images/demi douzene oeufs.png" alt="" />
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/douzene d'oeufs 1.png" alt="" /></a>
+            <a href=""><img src="./images/oeufs africain.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/douzene d'oeufs 2.png" alt="" /></a>
