--- a/detaille 1 pavet .html
+++ b/detaille 1 pavet .html
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="wrapper container">
-      <div class="logo"><a href="">JELMPB-Shop</a></div>
+      <div class="logo"><a href="index.html">JELMPB-Shop</a></div>
       <ul class="nav-list">
         <div class="top">
           <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
