--- a/plaquette d'oeufs.html
+++ b/plaquette d'oeufs.html
@@ -8,17 +8,14 @@
   <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-  <!-- Glidejs -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.css">
 
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="./styles.css" />
-  <title>JELMPB - Ecommerce Website Restez chez vous, Rendez Vous Dans Votre Boutique En Ligne! Achetez en ligne tous les produits Essentiels ✔ Supermarché, Produits de nettoyage, Produits Scolaire, Pavet, Matériels ou Outils D'ecoles et plus encore ✔ Toutes les marques à petits prix...! ✈ Livraison rapide partout à Abidjan... ✔ Paiement à la livraison</title>
+  <title>JELMPB - Ecommerce Website,détailler, détaillez et Restez chez vous, les produits, fait vos choix, produits 100% reciclable, Rendez Vous Dans Votre Boutique En Ligne! Achetez en ligne tous les produits Essentiels ✔ Supermarché, Produits de nettoyage, Produits Scolaire, Jeux Educative, Pavet, Matériels ou Outils D'ecoles et plus encore ✔ Toutes les marques à petits prix...! ✈ Livraison rapide partout à Abidjan... ✔ Paiement à la livraison</title>
 </head>
 
 <body>
-
+ 
   <!-- Navigation -->
   <nav class="nav">
     <div class="wrapper container">
@@ -93,7 +90,7 @@
         <!-- icons -->
         <li class="icons">
           <span>
-            <img src="./images/shoppingBag.svg" alt="" aria-selected="true" />
+            <img src="./images/shoppingBag.svg" alt="" />
             <small class="count d-flex">0</small>
           </span>
           <span><img src="./images/search.svg" alt="" /></span>
@@ -103,57 +100,158 @@
     </div>
   </nav>
 
-  <div class="hero">
-    <div class="left">
-      <span>Ventes exclusives</span>
-      <h1> BIENVENUE !<br>DANS VOTRE BOUTIQUE,<br>VOTRE CHEZ VOUS</h1>
-      <small>Recevez toutes les offres exclusives de la saison</small>
-      <a href="products.html">Voir la collection </a>
-    </div>
-    <div class="right">
-      <img src="./images/eleve devant ordi.png" alt="" />
-    </div>
-  </div>
+  <!-- Product Details -->
+  <section class="section product-detail">
+    <div class="details container">
+      <div class="left">
+        <div class="main">
+          <img src="./images/plaquette d'oeufs 1.png" alt="" />
+        </div>
+        <div class="thumbnails">
+          <div class="thumbnail">
+            <img src="./images/demi douzene oeufs.png" alt="" />
+          </div>
+          <div class="thumbnail">
+            <a href=""><img src="./images/douzene d'oeufs 1.png" alt="" /></a>
+          </div>
+          <div class="thumbnail">
+            <a href=""><img src="./images/douzene d'oeufs 2.png" alt="" /></a>
+          </div>
+          <div class="thumbnail">
+            <a href=""><img src="./images/DEMI paquette.png" alt="" /></a>
+          </div>
+          <div class="thumbnail">
+            <a href=""><img src="./images/oeufs africain.png" alt="" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <span>Domicile/Oeufs Africains</span>
+        <h1>Oeufs Africains</h1>
+        <div class="price">150 fcfa</div>
+        <form>
+          <div>
+            <select>
+              <option value="Select Size" selected disabled>
+                sélectionner le format
+              </option>
+              <option value="1">demi-douzène</option>
+              <option value="2">douzène </option>
+              <option value="3">demi-plaquette</option>
+              <option value="4">plaquette</option>
+            </select>
+            <span><i class="fas fa-chevron-down"></i></span>
+          </div>
+        </form>
 
-  <!-- BRANDS -->
-  <section class="section brands">
+        <form class="form">
+          <a href="cart oeufs africains.html" class="addCart">Ajouter au panier</a>
+        </form>
+        <h3>DÉTAIL DU PRODUIT</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima
+          delectus nulla voluptates nesciunt quidem laudantium, quisquam
+          voluptas facilis dicta in explicabo, laboriosam ipsam suscipit!
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Related Products -->
+
+  <section class="section related-products">
     <div class="title">
-      <h2>Nos Partenaires et Sponsors</h2>
-      <span>Des personalités, organisations et entreprises que nous remercions chaque jour dans notre lutte</span>
+      <h2>Produits connexes</h2>
+      <span>Choisissez parmi les marques de produits haut de gamme et économisez beaucoup d’argent</span>
     </div>
-  
+    <div class="product-layout container">
+      <div class="product">
+        <div class="img-container">
+          <img src="./images/pavet.jpg" alt="" />
+          <div class="addCart">
+            <a href="pavet.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
 
-    <div class="brand-layout container">
-      <div class="glide" id="glide1">
-        <div class="glide__track" data-glide-el="track">
-          <ul class="glide__slides">
-            <li class="glide__slide">
-              <a href="https://socialchangefactory.org/"><img src="./images/social propre.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.unicef.org/fr"><img src="./images/unicef.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.canadainternational.gc.ca/cotedivoire/index.aspx?lang=eng"><img src="./images/Claude Demers.jpg" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.freiheit.org/de"><img src="./images/fur de.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.groupensia.com/fr/fondation-nsia"><img src="./images/nsia.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.oxfam.org/fr"><img src="./images/oxfam.png" alt=""></a>
-            </li>
-            <li class="glide__slide">
-              <a href="https://www.total.sn/"><img src="./images/total senegal.png" alt=""></a>
-            </li>
-            
-            
+          <ul class="side-icons">
+            <span><i class="fas fa-search"></i></span>
+            <span><i class="far fa-heart"></i></span>
+            <span><i class="fas fa-sliders-h"></i></span>
           </ul>
+        </div>
+        <div class="bottom">
+          <a href="">Pavet Reciclable</a>
+          <div class="price">
+            <span>5000 fcfa/km°2</span>
+          </div>
         </div>
       </div>
 
+      <div class="product">
+        <div class="img-container">
+          <img src="./images/plante.jpg" alt="" />
+          <div class="addCart">
+            <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+
+          <ul class="side-icons">
+            <span><i class="fas fa-search"></i></span>
+            <span><i class="far fa-heart"></i></span>
+            <span><i class="fas fa-sliders-h"></i></span>
+          </ul>
+        </div>
+        <div class="bottom">
+          <a href="">Plante (fleur & potager etc...)</a>
+
+          <div class="price">
+            <span>5000 fcfa/km°2</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="product">
+        <div class="img-container">
+          <img src="./images/aracchide.jpg" alt="" />
+          <div class="addCart">
+            <a href="arachide.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+
+          <ul class="side-icons">
+            <span><i class="fas fa-search"></i></span>
+            <span><i class="far fa-heart"></i></span>
+            <span><i class="fas fa-sliders-h"></i></span>
+          </ul>
+        </div>
+        <div class="bottom">
+          <a href="">Arachide</a>
+
+          <div class="price">
+            <span>100 fcfa/sachet</span>
+            <span class="cancel">200 fcfa/sachet</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="product">
+        <div class="img-container">
+          <img src="./images/feuilles d'oignon.jpg" alt="" />
+          <div class="addCart">
+            <a href="feuilles d'oignon.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+
+          <ul class="side-icons">
+            <span><i class="fas fa-search"></i></span>
+            <span><i class="far fa-heart"></i></span>
+            <span><i class="fas fa-sliders-h"></i></span>
+          </ul>
+        </div>
+        <div class="bottom">
+          <a href="">feuilles d'oignon</a>
+          <div class="price">
+            <span>500 fcfa/kilko</span>
+            <span class="cancel">600 fcfa/kilo</span>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -171,10 +269,10 @@
         </div>
         <div class="footer-center">
           <h3>INFORMATION</h3>
-          <a href="apropos et detailles.html">À propos de nous</a>
+          <a href="#">À propos de nous</a>
           <a href="#">Politique de confidentialité</a>
           <a href="#">termes et conditions</a>
-          <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">Nous contacter</a>
+          <a href="#">Nous contacter</a>
           <a href="#">Plan du site</a>
         </div>
         <div class="footer-center">
@@ -186,25 +284,24 @@
           <a href="#">Retour</a>
         </div>
         <div class="footer-center">
-          <a href="http://jelmpbschop.e-monsite.com/contact/contact.html"><h3>CONTACTER-NOUS</h3></a>
+          <h3>CONTACTER-NOUS</h3>
           <div>
             <span>
               <i class="fas fa-map-marker-alt"></i>
             </span>
-            <a href="https://www.google.com/maps/place/Lyc%C3%A9e+Moderne+de+Port+Bouet/@5.2550168,-3.960339,17z/data=!3m1!4b1!4m5!3m4!1s0xfc1ef1d4375d901:0xbaaea4fef887409d!8m2!3d5.2550108!4d-3.9581466">lycée moderne de port bouet</a>
+            JELMPB, 724R+2P Abidjan, COTE D'IVOIRE
           </div>
           <div>
             <span>
               <i class="far fa-envelope"></i>
             </span>
-            <a href="">JELMPB-Shop@gmail.com</a>
+            JELMPB-Shop@gmail.com
           </div>
           <div>
             <span>
               <i class="fas fa-phone"></i>
             </span>
-            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">+225 0787275329</a>
-            +225 0779922529
+            +225 bla bla bla
           </div>
           <div class="payment-methods">
             <img src="./images/payment.png" alt="">
@@ -216,9 +313,6 @@
   </footer>
   <!-- End Footer -->
 
-  <!-- Glidejs -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
-
   <!-- Custom Scripts -->
   <script src="./js/products.js"></script>
   <script src="./js/slider.js"></script>
@@ -226,4 +320,3 @@
 </body>
 
 </html>
-
