--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="img-container">
           <img src="./images/oeufs africain.jpg" alt="" />
           <div class="addCart">
-            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="oeufs africain .html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -464,7 +464,7 @@
             <span>
               <i class="far fa-envelope"></i>
             </span>
-            <a href="#">JELMPB-Shop@gmail.com</a>
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Nous écris par email: </a>schoolphoenix225@gmail.com
           </div>
           <div>
             <span>
