--- a/oeufs africain .html
+++ b/oeufs africain .html
@@ -109,19 +109,19 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <img src="./images/demi douzene oeufs.png" alt="" />
+            <a href="demi douzene oeufs.html"><img src="./images/demi douzene oeufs.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/douzene d'oeufs 1.png" alt="" /></a>
+            <a href="douzene d'oeufs 1.html"><img src="./images/douzene d'oeufs 1.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/douzene d'oeufs 2.png" alt="" /></a>
+            <a href="douzene d'oeufs 2.html"><img src="./images/douzene d'oeufs 2.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/DEMI paquette.png" alt="" /></a>
+            <a href="demi plaquette.html"><img src="./images/DEMI paquette.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/plaquette d'oeufs 1.png" alt="" /></a>
+            <a href="plaquette d'oeufs.html"><img src="./images/plaquette d'oeufs 1.png" alt="" /></a>
           </div>
         </div>
       </div>
