--- a/cache nez.html
+++ b/cache nez.html
@@ -129,9 +129,9 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Cache Nez</span>
-        <h1>Cache Nez</h1>
-        <div class="price">250 fcfa</div>
+        <span>Domicile/Petits Cache-Nez</span>
+        <h1>Petits Cache-Nez  (fille & garçon)</h1>
+        <div class="price">800 fcfa</div>
         <form>
           <div>
             <select>
