--- a/cart pavet.html
+++ b/cart pavet.html
@@ -107,7 +107,7 @@
       <table>
         <tr>
           <th>produit</th>
-          <th>quantité</th>
+          <th>notre contact</th>
           <th>sous-total</th>
         </tr>
         <tr>
@@ -115,15 +115,15 @@
             <div class="cart-info">
               <img src="./images/pavet.png" alt="" />
               <div>
-                <p>Trousse Réciclable</p>
-                <span>Price: 5000.00 fcfa/km°2</span>
+                <p>pavet recyclable</p>
+                <span>Price: commander</span>
                 <br />
                 <a href="pavet.html">remove</a>
               </div>
             </div>
           </td>
-          <td><input type="number" class="" value="1" min="1" /></td>
-          <td>5000.00 fcfa/km°2</td>
+          <td>+225 0787275329</td>
+          <td>commander</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>5000 fcfa/km°2</td>
+            <td>par commande</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>5000 fcfa/km°2</td>
+            <td>par commande</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
