--- a/cart savon liquide.html
+++ b/cart savon liquide.html
@@ -116,14 +116,14 @@
               <img src="./images/savon liquide.png" alt="" />
               <div>
                 <p>Savon Liquide</p>
-                <span>Price: 500.00 fcfa</span>
+                <span>Price: 3(bidon)x500.00 fcfa</span>
                 <br />
                 <a href="savon liquide.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>500.00 fcfa</td>
+          <td>3(bidon)x500.00 fcfa</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>500 fcfa</td>
+            <td>3(bidon)x500 fcfa</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>500 fcfa</td>
+            <td>3(bidon)x500 fcfa</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
