--- a/cart trousse.html
+++ b/cart trousse.html
@@ -115,7 +115,7 @@
             <div class="cart-info">
               <img src="./images/trousse.png" alt="" />
               <div>
-                <p>Trousse Réciclable</p>
+                <p>Petits Trousse-Récyclable</p>
                 <span>Price: 500.00 fcfa</span>
                 <br />
                 <a href="trousse.html">remove</a>
