--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Trousse Réciclable</a>
+          <a href="">Petits Trousse-Récyclable</a>
           <div class="price">
             <span>500 fcfa</span>
           </div>
@@ -217,10 +217,10 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Cache Nez (fille & garçon)</a>
+          <a href="">Petits Cache-Nez (fille & garçon)</a>
           <div class="price">
-            <span>250 fcfa</span>
-            <span class="cancel">500 fcfa</span>
+            <span>800 fcfa</span>
+            <span class="cancel">1000 fcfa</span>
           </div>
         </div>
       </div>
@@ -241,7 +241,7 @@
         <div class="bottom">
           <a href="">Savon liquide</a>
           <div class="price">
-            <span>500 fcfa</span>
+            <span>3(bidon)x500 fcfa</span>
           </div>
         </div>
       </div>
@@ -282,9 +282,9 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Pavet Réciclable</a>
+          <a href="">Pavet Récyclable</a>
           <div class="price">
-            <span>5000 fcfa/km°2</span>
+            <span>commander</span>
           </div>
         </div>
       </div>
@@ -303,10 +303,10 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Plante (fleur & potager etc...)</a>
+          <a href="">Feuilles de moringa (seché en poudre)</a>
 
           <div class="price">
-            <span>5000 fcfa/km°2</span>
+            <span>5000 fcfa/sachet</span>
           </div>
         </div>
       </div>
@@ -350,8 +350,8 @@
         <div class="bottom">
           <a href="">feuilles d'oignon</a>
           <div class="price">
-            <span>500 fcfa/kilko</span>
-            <span class="cancel">600 fcfa/kilo</span>
+            <span>500 fcfa/sachet</span>
+            <span class="cancel">600 fcfa/sachet</span>
           </div>
         </div>
       </div>
