--- a/savon liquide.html
+++ b/savon liquide.html
@@ -131,7 +131,7 @@
       <div class="right">
         <span>Domicile/Savon Liquide</span>
         <h1>Savon Liquide</h1>
-        <div class="price">500 fcfa</div>
+        <div class="price">3(bidon)x500 fcfa</div>
         <form>
           <div>
             <select>
