--- a/trousse.html
+++ b/trousse.html
@@ -129,8 +129,8 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Trousse</span>
-        <h1>Trousse Réciclable</h1>
+        <span>Domicile/Petits Trousse-Récyclable</span>
+        <h1>Petits Trousse-Récyclable</h1>
         <div class="price">500 fcfa</div>
         <form>
           <div>
