--- a/cart plante.html
+++ b/cart plante.html
@@ -138,7 +138,7 @@
             <td>par commande</td>
           </tr>
         </table>
-        <a href="index.html" class="checkout btn">Passer à la caisse</a>
+        <a href="index.html" class="checkout btn">Commander</a>
       </div>
     </div>
 
