--- a/plante.html
+++ b/plante.html
@@ -147,7 +147,7 @@
         </form>
 
         <form class="form">
-          <a href="cart plante.html" class="addCart">Ajouter au panier</a>
+          <a href="cart plante.html" class="addCart">Commander</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
