--- a/trousse.html
+++ b/trousse.html
@@ -138,8 +138,8 @@
               <option value="Select Size" selected disabled>
                 sélectionner la forme
               </option>
-              <option value="1">moyenne</option>
-              <option value="2">grande</option>
+              <option value="1">mince</option>
+              <option value="2">grosse</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
