--- a/detaille 1 pavet .html
+++ b/detaille 1 pavet .html
@@ -130,23 +130,22 @@
       </div>
       <div class="right">
         <span>Domicile/Pavet</span>
-        <h1>Pavet Réciclable</h1>
-        <div class="price">5000 fcfa/km°2</div>
+        <h1>Pavet Récyclable</h1>
+        <div class="price">par commande</div>
         <form>
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                l'unité de mesure
+                numéros à contacter
               </option>
-              <option value="1">m°2</option>
-              <option value="2">km°2</option>
+              <option value="1">+225 0787275329</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
         </form>
 
         <form class="form">
-          <a href="cart pavet.html" class="addCart">Ajouter au panier</a>
+          <a href="cart pavet.html" class="addCart">Commander</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
