--- a/detaille plante 1 .html
+++ b/detaille plante 1 .html
@@ -129,24 +129,25 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Plante (fleur & potager etc...)</span>
-        <h1>Plante (fleur & potager etc...)</h1>
-        <div class="price">5000 fcfa/km°2</div>
+        <span>Domicile/Feuilles de moringa (seché en poudre)</span>
+        <h1>Feuilles de moringa (seché en poudre)</h1>
+        <div class="price">commander</div>
         <form>
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                l'unité de mesures
+                sélectioner le format
               </option>
-              <option value="1">m°2</option>
-              <option value="2">km°2</option>
+              <option value="1">petit</option>
+              <option value="2">moyen</option>
+              <option value="2">grand</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
         </form>
 
         <form class="form">
-          <a href="cart plante.html" class="addCart">Ajouter au panier</a>
+          <a href="cart plante.html" class="addCart">Commander</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
