--- a/detaille trousse 1.html
+++ b/detaille trousse 1.html
@@ -129,8 +129,8 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Trousse</span>
-        <h1>Trousse Réciclable</h1>
+        <span>Domicile/Petits Trousse-Récyclable</span>
+        <h1>Petits Trousse-Récyclable</h1>
         <div class="price">500 fcfa</div>
         <form>
           <div>
@@ -138,8 +138,8 @@
               <option value="Select Size" selected disabled>
                 sélectionner la forme
               </option>
-              <option value="1">moyenne</option>
-              <option value="2">grande</option>
+              <option value="1">mince</option>
+              <option value="2">grosse</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
