--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
       <div class="product">
         <div class="img-container">
-          <img src="./images/plante.jpg" alt="" />
+          <img src="./images/feuilles de moringa (seché en poudre).jpg" alt="" />
           <div class="addCart">
             <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
