--- a/cart plante.html
+++ b/cart plante.html
@@ -113,7 +113,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/plante.png" alt="" />
+              <img src="./images/feuilles de moringa (seché en poudre).png" alt="" />
               <div>
                 <p>Feuilles de moringa (seché en poudre)</p>
                 <span>Price: commander</span>
