--- a/plante.html
+++ b/plante.html
@@ -105,7 +105,7 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/plante.png" alt="" />
+          <img src="./images/feuilles de moringa (seché en poudre).png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
