--- a/cart plante.html
+++ b/cart plante.html
@@ -107,7 +107,7 @@
       <table>
         <tr>
           <th>produit</th>
-          <th>quantité</th>
+          <th>notre contact</th>
           <th>sous-total</th>
         </tr>
         <tr>
