--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           <a href="">Feuilles de moringa (seché en poudre)</a>
 
           <div class="price">
-            <span>5000 fcfa/sachet</span>
+            <span>commander</span>
           </div>
         </div>
       </div>
