--- a/cart feuilles d'oignon.html
+++ b/cart feuilles d'oignon.html
@@ -113,17 +113,17 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/feuilles d'oignon.png" alt="" />
+              <img src="./images/detaille feuilles d'oignon (1).png" alt="" />
               <div>
-                <p>feuilles d'oignon</p>
-                <span>Price: 500.00 fcfa/kilko</span>
+                <p>feuilles d'oignon (en bouteille)</p>
+                <span>Price: 500.00 fcfa/sachet</span>
                 <br />
                 <a href="feuilles d'oignon.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>500.00 fcfa/kilko</td>
+          <td>500.00 fcfa/sachet</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>500 fcfa/kilko</td>
+            <td>500 fcfa/sachet</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>500 fcfa/kilko</td>
+            <td>500 fcfa/sachet</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
