--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
       <div class="product">
         <div class="img-container">
-          <img src="./images/feuilles d'oignon.jpg" alt="" />
+          <img src="./images/detaille feuilles d'oignon (1).png" alt="" />
           <div class="addCart">
             <a href="feuilles d'oignon.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
@@ -348,7 +348,7 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">feuilles d'oignon</a>
+          <a href="">feuilles d'oignon (en bouteille)</a>
           <div class="price">
             <span>500 fcfa/sachet</span>
             <span class="cancel">600 fcfa/sachet</span>
