--- a/detaille feuilles d'oignon 1.html
+++ b/detaille feuilles d'oignon 1.html
@@ -105,11 +105,11 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/detaille feuilles d'oignon (1).png" alt="" />
+          <img src="./images/detaille feuilles d'oignon.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <a href="detaille feuilles d'oignon 1.html"><img src="./images/detaille feuilles d'oignon.png" alt="" /></a>
+            <a href="feuilles d'oignon.html"><img src="./images/detaille feuilles d'oignon (1).png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
