--- a/arachide.html
+++ b/arachide.html
@@ -136,20 +136,11 @@
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner le kilo
+                sélectionner le format
               </option>
-              <option value="1">10</option>
-              <option value="2">15</option>
-              <option value="3">20</option>
-              <option value="4">25</option>
-              <option value="1">30</option>
-              <option value="2">35</option>
-              <option value="3">40</option>
-              <option value="4">45</option>
-              <option value="1">50</option>
-              <option value="2">75</option>
-              <option value="3">100</option>
-              <option value="4">125</option>
+              <option value="1">petit</option>
+              <option value="2">moyen</option>
+              <option value="3">grand</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
