--- a/cache nez 2.html
+++ b/cache nez 2.html
@@ -109,7 +109,7 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <img src="./images/" alt="" />
+            <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
@@ -129,9 +129,9 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Petits Cache-Nez (enfants)</span>
-        <h1>Petits Cache-Nez (enfants)</h1>
-        <div class="price">800 fcfa</div>
+        <span>Domicile/Grand Cache-Nez (aldutes)</span>
+        <h1>Grand Cache-Nez (aldutes)</h1>
+        <div class="price">1000 fcfa</div>
         <form>
           <div>
             <select>
