--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Petits Cache-Nez (fille & garçon)</a>
+          <a href="">Petits Cache-Nez (enfants)</a>
           <div class="price">
             <span>800 fcfa</span>
             <span class="cancel">1000 fcfa</span>
@@ -336,7 +336,7 @@
 
       <div class="product">
         <div class="img-container">
-          <img src="./images/detaille feuilles d'oignon (1).png" alt="" />
+          <img src="./images/detaille feuilles d'oignon (1).jpg" alt="" />
           <div class="addCart">
             <a href="feuilles d'oignon.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
@@ -478,7 +478,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
   </footer>
   <!-- End Footer -->
