--- a/cart cache nez 2.html
+++ b/cart cache nez 2.html
@@ -115,15 +115,15 @@
             <div class="cart-info">
               <img src="./images/cache nez.png" alt="" />
               <div>
-                <p>Petits Cache-Nez (enfants)</p>
-                <span>Price: 800.00 fcfa</span>
+                <p>Grand Cache-Nez (aldutes)</p>
+                <span>Price: 1000 fcfa</span>
                 <br />
-                <a href="cache nez.html">remove</a>
+                <a href="cache nez 2.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>800.00 fcfa</td>
+          <td>1000.00 fcfa</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>800 fcfa</td>
+            <td>1000 fcfa</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>800 fcfa</td>
+            <td>1000 fcfa</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
